--- a/Skript.tex
+++ b/Skript.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt,a4paper]{scrartcl} 
-\usepackage[left=1cm,right=1cm,top=1cm,bottom=1cm]{geometry} 
+\usepackage[left=1cm,right=1cm,top=2cm,bottom=2cm]{geometry} 
 \usepackage[utf8]{inputenc} 
 \usepackage[ngerman]{babel} 
 \usepackage[most]{tcolorbox}
@@ -19,6 +19,7 @@
 \usepackage{circuitikz}
 \usepackage{placeins}
 \usepackage{mathtools}
+\usepackage{fancyhdr}
 \usetikzlibrary{calc}
 \usetikzlibrary{tikzmark}
 
@@ -83,11 +84,21 @@
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
 		\node[shape=circle,draw,inner sep=1pt] (char) {#1};}}
 
-\author{Levin Baumann}
-\title{Digitaltechnik}
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[L]{\leftmark}
+\fancyhead[FR]{\thepage}
+\renewcommand{\headrulewidth}{0pt}
+
+\author{TINF19B3}
+\date{1. \& 2. Semester 2020}
+\title{Digitaltechnik-Skript}
 
 \begin{document}
 	\maketitle
+	\newpage
+	\tableofcontents
+	\newpage
 	\section{Begriffe}
 	\begin{tabular}{r|l}
 		digital & analog \\
