--- a/Skript.tex
+++ b/Skript.tex
@@ -84,6 +84,12 @@
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
 		\node[shape=circle,draw,inner sep=1pt] (char) {#1};}}
 
+\makeatletter
+\let\newtitle\@title
+\let\newauthor\@author
+\let\newdate\@date
+\makeatother
+
 \pagestyle{fancy}
 \fancyhf{}
 \fancyhead[L]{\leftmark}
@@ -95,7 +101,26 @@
 \title{Digitaltechnik-Skript}
 
 \begin{document}
-	\maketitle
+\begin{titlepage}
+	\newgeometry{left=7.5cm} %defines the geometry for the titlepage
+	\pagecolor{red!40!gray}
+	\noindent
+	\color{white}
+	\makebox[0pt][l]{\rule{1.3\textwidth}{1pt}}
+	\par
+	\noindent
+	\textbf{\textsf{DHBW Karlsruhe}} \textcolor{gray!20}{\textsf{TINF19B3}}
+	\vfill
+	\noindent
+	{\huge \textsf{Digitaltechnik-Skript}}
+	\vskip\baselineskip
+	\noindent
+	\textsf{1. \& 2. Semester}
+\end{titlepage}
+\restoregeometry % restores the geometry
+\nopagecolor% Use this to restore the color pages to white	
+
+
 	\newpage
 	\tableofcontents
 	\newpage
@@ -129,7 +154,6 @@
 		\item Signalcodierung
 	\end{itemize}
 
-	\subsection{Codierungen}
 	\subsubsection{Zeichencodierung}
 	\begin{itemize}
 		\item ASCII: Alphabet besteht aus (ganzen) Zahlen von 0 bis 127
@@ -166,7 +190,7 @@
 		\item[$ \ominus $] Hilfsmittel (Schreibwerkzeug) notwendig
 		\item[$ \ominus $] unübersichtlich darstellbarer Wertebereich bis etwa 10 (10 Symbole notiert)
 	\end{itemize}
-	\subparagraph{erweiterte Strichliste (\glqq Lattenzaunsystem \grqq)}
+	\subparagraph{erweiterte Strichliste (\glqq Lattenzaunsystem\grqq)}
 	\begin{itemize}
 		\item[] Alphabet = {I, \cancel{\text{IIII}}}
 		\item[] Wert ( I ) = 1
@@ -202,7 +226,7 @@
 	$$
 	Wert(Z_{n-1} \dots Z_0) = \sum_{i=0}^{n-1}|Z_i|\cdot10^i
 	$$
-	\subparagraph{\ac{SWS} zur Basis b}
+	\subparagraph{\acl{SWS} zur Basis b}
 	\begin{itemize}
 		\item[] Alphabet enthält b Ziffern
 		\item[] Alphabet beginnt bei Ziffer \glqq 0\grqq\ und endet bei Ziffer \glqq b-1\grqq\
@@ -213,7 +237,7 @@
 	$b_{EIN}$ mit $b>1$\\
 	\textit{Anmerkung:} $b=1$ nicht sinnvoll, da im \ac{SWS} zur Basis nur die 0 dargestelt werden könnte.
 	\begin{itemize}
-		\item[$ \oplus/\ominus $] gewisses \glqq Erstverständnis \grqq\/Lernaufwand ist nötig
+		\item[$ \oplus/\ominus $] gewisses \glqq Erstverständnis\grqq\/Lernaufwand ist nötig
 		\item[$ \oplus/\ominus $] es gibt für jede Grundrechenart einVerfahren mit etwas erhöhter Komplexität, welches aber nach erstmaligem Lernaufwand doch relativ problemfrei realisierbar ist
 		\item[$ \oplus/\ominus $] unbeschränkter Wertebereich
 		\item[$ \oplus/\ominus $] Wertebereich bis etwa $b^10$ ist übersichtlich darstelbar
@@ -226,7 +250,7 @@
 		\subitem $ \Rightarrow $ Werteformel umgekehrt
 		\subitem $ \Rightarrow $ Ganzzahldivision
 	\end{itemize}
-	\begin{equation}
+	\begin{equation*}
 	\begin{split}
 	{42}_{10} &= 101010\\	
 	43:2 &= 21R0 = Z_0\\
@@ -236,8 +260,8 @@
 	2:2  &= 1R0 =Z_4\\
 	1:2	&= 0R1 = Z_5
 	\end{split}
-	\end{equation}
-	Hinweis: Führende \glqq 0 \grqq\ können bei Zahlen im \ac{SWS} beliebig hinzugefügt oder weggelassen werden. 
+	\end{equation*}
+	Hinweis: Führende \glqq 0\grqq\ können bei Zahlen im \ac{SWS} beliebig hinzugefügt oder weggelassen werden. 
 	allg: Umrechnung von Basis $b_1$ nach Basis $b_2$
 	\begin{itemize}
 		\item meist: von Basis $b_1$ nach $b_Z=10$ dann von $b_Z$ nach $b_2$
@@ -252,7 +276,7 @@
 	\underline{Gängige Basen im \ac{SWS}}\\
 	$ b=10 $ \glqq Dezimalsystem\grqq\ $ \Rightarrow $ Mensch\\
 	$ b=2 $ \glqq Binärsystem\grqq\/\glqq Dualsystem\grqq\ $ \Rightarrow $ Digitalrechner \\
-	$ b=16 $ \glqq Hexadezimalsystem \grqq\ $ \Rightarrow $ Computernahe Darstellung von Zahlen
+	$ b=16 $ \glqq Hexadezimalsystem\grqq\ $ \Rightarrow $ Computernahe Darstellung von Zahlen
 	\begin{itemize}
 		\item weniger Stellen
 		\item einfache Umrechnung
@@ -319,30 +343,49 @@ auch negative Zahlen!
 	Alle Bits werden invertiert: $ 0 \rightarrow 1; \; 1\rightarrow 0 $\\
 	Aber vorher: bei positiven Zahlen mindestens eine führende Null.\\
 	Außerdem: alle Zahlen auf \underline{gleiche} Länge!
-
+\begin{figure}
+	$$
+\begin{array}{rc}
+& 37 \\
+-  & 42 \\
+& \\
+ & \textcolor{green!80!black}{-5}
+\end{array}
+\begin{array}{cccccccccl}
+& 0 & 0 & 1 & 0 & 0 & 1 & 0 & 1 &\\
+& 1 & 1 & 0 & 1 & 0 & 1 & 0 & 1 &\\
+ &  &  &  &    & _1 &  & _1 &  &\\ \cline{1-9}
+   & 1 & 1 & 1 & 1 & 1 & 0 & 1 & 0 & \text{\phantom{(9. Stelle wird ignoriert)}}
+\end{array}
 $$
+\caption{Richtiges Ergebnis mit 1er-Komplement}
+\end{figure}
+\begin{figure}[h!]
+	$$
 \begin{array}{rc}
 	& 42 \\
  -  & 37 \\
     & \\
-    &
+    & \textcolor{red}{4}
 \end{array}
 \begin{array}{cccccccccl}
        & 0 & 0 & 1 & 0 & 1 & 0 & 1 & 0 &\\
        & 1 & 1 & 0 & 1 & 1 & 0 & 1 & 0 &\\
  _1 & _1 & _1 & _1 & _1 &     & _1 &    & &\\ \hline
 \hcancel[red]{1}  & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & \text{(9. Stelle wird ignoriert)}
-
 \end{array}
 $$
+\caption{Falsches Ergebnis mit 1er-Komplement}
+\end{figure}
+
 
 \subsubsection*{Nachteile 1er-Komplement}
 \begin{itemize}
-	\item Manchmal (leicht) falsche ERgebnisse
+	\item Manchmal (leicht) falsche Ergebnisse
 	\item Zwei verschiedene Darstellungen der \glqq 0\grqq \\
 	$  +0 \hat{=} 0000 \xrightarrow{e.K.} 1111 \hat{=} -0 $
 \end{itemize}
-\subsubsection*{Wertebereich 8bit-1-IC-Zahlen:}
+\subsubsection*{Wertebereich 8bit-1-Komplement-Zahlen:}
 $$
 01111111 = 127 \\
 -127 = 10000000 \xrightarrow{eK} 01111111 = 127
@@ -365,8 +408,8 @@ $$
 $ \bigominus $ Es gibt unendlich viele Darstellungen jeder Zahl als Bruch. Lösungsmöglichkeit: nur gekürzte Darstellung.\\
 $ \Rightarrow $ Normalerweise keine Darstellung von Zahlen als Bruch im PC (Ausnahme: algebraisches Lösen von Gleichungssystemen)
 
-\subsubsection{\acp{FKZ}}
-Alphabet mit Ziffern wird erweitert um \glqq Komma \grqq (\glqq , \grqq)\\
+\subsubsection{\aclp{FKZ}}
+Alphabet mit Ziffern wird erweitert um \glqq Komma\grqq (\glqq \textbf{,}\grqq)\\
 $ \Rightarrow $ In der Symbolfolge ist maximal ein komma erlaubt. \\
 Bsp: Zahl mit $n$ Vor- und Nachkommastellen
 $$
@@ -728,11 +771,11 @@ $ TTL-Pegel
 		\subitem \ac{GSF} bei \ac{AMI}: nachjeder 2. \glqq1\grqq: In der Praxis ist der GS-Anteil nach der ungeraden \glqq1\grqq\ vernachlässigbar (bei langer Übertragungszeit und vielen übertragenen \glqq1\grqq), also praktisch immer \ac{GSF}.
 		\subitem \ac{TRG} bei \ac{AMI}: bei jeder \glqq1\grqq\ nur bei langer Folge von \glqq0\grqq\ keine \ac{TRG} möglich
 	\item Manchester\\
-		Bitwert wird über Spannungswechsel in der Mitte der Schrittzeit dargestellt, z.B. steigende Flanke $\hat{=}$ \glqq1\grqq und fallende Flanke $\hat{=}$ \glqq 0 \grqq.\\
+		Bitwert wird über Spannungswechsel in der Mitte der Schrittzeit dargestellt, z.B. steigende Flanke $\hat{=}$ \glqq1\grqq und fallende Flanke $\hat{=}$ \glqq 0\grqq.\\
 		ggf. ist ein weiterer Spannungswechsel zu Beginn der Schrittzeit notwendig, um den nachfogenden (inhaltsführenden) Spannungswechsel durchführen zu können.
 		\subitem \ac{TRG} bei Manchester: bei jedem Schritt möglich, da immer Regelwechsel in der Mitte der Schrittzeit.
 		\subitem \ac{GSF} bei Manchester: immer, da sich die Pegel in erster und zweiter Schrittzeithälfte gegenseitig ausgleichen
-		\subitem \ac{SSH} bei Manchester: optimal, da \glqq nur \grqq 2 Pegel
+		\subitem \ac{SSH} bei Manchester: optimal, da \glqq nur\grqq 2 Pegel
 \end{enumerate}
 
 \begin{figure}[h]
@@ -767,7 +810,7 @@ $ TTL-Pegel
 	\textbf{\ac{BBB} bei \ac{NRZ}:} halbe Schrittrate, d.h. optimal H. Nyquist (max Frequenz bei \glqq010101...\grqq)\\
 	\textbf{\ac{BBB} bei \ac{RZ}:} Schrittrate, d.h. doppelt so viel wie nötig. (max Frequenz bei \glqq000000...\grqq, oder \glqq 111111...\grqq )\\
 	\textbf{\ac{BBB} bei \ac{AMI}:} halbe Schrittrate (max Frequenz bei \glqq 111111...\grqq)\\
-	\textbf{\ac{BBB} bei Manchester:} Schrittrate (max Frequenz bei \glqq 000000...\grqq oder \glqq 111111 \grqq)\\
+	\textbf{\ac{BBB} bei Manchester:} Schrittrate (max Frequenz bei \glqq 000000...\grqq oder \glqq 111111\grqq)\\
 
 \begin{tabularx}{\textwidth}{l|Y|Y|Y|Y}
 	 & \ac{TRG} 
@@ -775,18 +818,18 @@ $ TTL-Pegel
 	 & \ac{SSH} \newline abhängig von Anzahl Pegel 
 	 & \ac{BBB} \newline abhängig von Schrittrate \\ \hline \rule{0pt}{2em} 
 	 \ac{NRZ} 
-	 & bei \glqq 01 \grqq und \glqq 10 \grqq \newline \circled{$=$} 
-	 & \#\glqq 1 \grqq = \# \glqq 0 \grqq \newline (1 und 0 gleichverteilt) \newline \circled{$-$}
+	 & bei \glqq 01\grqq und \glqq 10\grqq \newline \circled{$=$} 
+	 & \#\glqq 1\grqq = \# \glqq 0\grqq \newline (1 und 0 gleichverteilt) \newline \circled{$-$}
 	 & 2 \newline \circled{$+$}
 	 & halbe \newline \circled{$+$}\\ \hline \rule{0pt}{2em}
 	 \ac{RZ}
-	 & bei jeder \glqq 1 \grqq \newline \circled{$-$}
-	 & symm. Pegel \& nur \glqq 1 \grqq, single ended \& nur \glqq 0 \grqq, \#1 = \#0 und umgekehrt \newline \circled{$=$}
+	 & bei jeder \glqq 1\grqq \newline \circled{$-$}
+	 & symm. Pegel \& nur \glqq 1\grqq, single ended \& nur \glqq 0\grqq, \#1 = \#0 und umgekehrt \newline \circled{$=$}
 	 & 2 \newline \circled{$+$}
 	 & ganze \newline \circled{$-$} \\ \hline \rule{0pt}{2em}
 	 \ac{AMI}
-	 & bei jeder \glqq 1 \grqq \newline \circled{$-$}
-	 & nach jeder zweiten \glqq 1 \grqq, in der Praxis \glqq immer \grqq \newline \circled{$+$}
+	 & bei jeder \glqq 1\grqq \newline \circled{$-$}
+	 & nach jeder zweiten \glqq 1\grqq, in der Praxis \glqq immer\grqq \newline \circled{$+$}
 	 & 3 \newline \circled{$-$}
 	 & halbe \newline \circled{$+$} \\ \hline \rule{0pt}{2em}
 	 Manch. 
@@ -805,11 +848,11 @@ $ TTL-Pegel
 \subsubsection*{3 Verfahren zur sicheren Taktrückgewinnung:}
 \begin{enumerate}
 	\item \textbf{Startbitsequenz} \\
-	Vor $n$ Nutzdatenbit wird eine Startbitsequenz gestellt, welche sichere \ac{TRG} ermöglicht. z.B. bei \ac{NRZ}: \glqq 01\grqq oder \glqq 10 \grqq. $n$ ist abhängig von der Genauigkeit der Uhren. \\
+	Vor $n$ Nutzdatenbit wird eine Startbitsequenz gestellt, welche sichere \ac{TRG} ermöglicht. z.B. bei \ac{NRZ}: \glqq 01\grqq oder \glqq 10\grqq. $n$ ist abhängig von der Genauigkeit der Uhren. \\
 	\textbf{Nachteil:} relativ großer Overhead, effektive Nutzdatenrate deutlich kleiner als die Schrittrate.\\
 	\noindent\hspace*{2em}% 
 	Im Beispiel: Nutzdatenrate = $\dfrac{n}{n+2}\cdot Schrittweite$\\
-	Bsp: bei \ac{RZ} oder \ac{AMI} reicht ein einfaches \glqq 1 \grqq-Startbit. (Keine \glqq Sequenz\grqq, weniger Overhead)\\
+	Bsp: bei \ac{RZ} oder \ac{AMI} reicht ein einfaches \glqq 1\grqq-Startbit. (Keine \glqq Sequenz\grqq, weniger Overhead)\\
 	\textbf{Anwendung:} z.B.serielle Schnittstelle RS232
 	
 	\item \textbf{Bitstuffing (\glqq Bitstopfen\grqq)}\\
@@ -833,7 +876,7 @@ $ TTL-Pegel
 \\ \\ \\
 	\textbf{Hinweis:} Der Empfänger schaut nach $n$ gleichen Bitwerten den nächsten Bitwert an. Bei entgegengesetztem Bitwert wird dieses \glqq Stopfbit\grqq entfernt. Bei gleichem Bitwert wird ein Fehler nach oben gemeldet.\\
 	\textbf{Vor-/Nachteile:} Overhead bei \ac{NRZ} im schlimmsten fall nur halb so groß wie bei der Startbitsequenz (nur eine statt zwei Schrittzeiten pro $n$ Nutzdatenbit) und im besten Fall gar kein Overhead! \\
-	\textbf{bei \ac{RZ}:} nur nach $n$ \glqq 0\grqq wird eine \glqq 1 \grqq eingefügt, d.h. weniger Overhead als bei \ac{NRZ} und Bitstuffing. Verfahren ist komplex und deshalb \grqq teuer\grqq und \glqq fehleranfällig\grqq . Nutzdatenrate ist nicht konstant abhängig von Schrittrate, sondern sie variiert abhängig von den zu übermittelnden Nutzdaten (Overhead ist variabel) $\Rightarrow$ schlecht für Anwendungen mit konstanter Nutzdatenrate (z.B. PCM-kodiertes Audio)\\
+	\textbf{bei \ac{RZ}:} nur nach $n$ \glqq 0\grqq wird eine \glqq 1\grqq eingefügt, d.h. weniger Overhead als bei \ac{NRZ} und Bitstuffing. Verfahren ist komplex und deshalb\grqq teuer\grqq und \glqq fehleranfällig\grqq . Nutzdatenrate ist nicht konstant abhängig von Schrittrate, sondern sie variiert abhängig von den zu übermittelnden Nutzdaten (Overhead ist variabel) $\Rightarrow$ schlecht für Anwendungen mit konstanter Nutzdatenrate (z.B. PCM-kodiertes Audio)\\
 	\textbf{Anwendung:} Ethernet (um Bitmuster des Frame-Delimiters \glqq 01111110\grqq auszuschließen $\Rightarrow$ nach fünf \glqq 1\grqq wird eine Stopf-\glqq 0\grqq eingeschoben)
 	
 	\item \textbf{Blockcodierung}\\
@@ -1111,9 +1154,9 @@ Darstellung von Funktionen:
 					 & $ f_1() = 1 $ & \glqq Einsfunktion\grqq \\ \hline
 \multicolumn{3}{|l|}{$ \Rightarrow $ (nur) 2 verschiedene Funktionen abhängig von 0 Variablen!}\\ \hline
 	$ n = 1 $ & $ f_0(a) = 0 $ & \glqq Nullfunktion\grqq \\
-					 & $ f_1(a) = \overline{a} $ & \glqq Negation \grqq \\
-					 & $ f_2(a) = a $ & \glqq Identität \grqq \\
-					 & $ f_3(a) = 1 $ & \glqq Einsfunktion \grqq \\ \hline
+					 & $ f_1(a) = \overline{a} $ & \glqq Negation\grqq \\
+					 & $ f_2(a) = a $ & \glqq Identität\grqq \\
+					 & $ f_3(a) = 1 $ & \glqq Einsfunktion\grqq \\ \hline
  \multicolumn{3}{|l|}{$ \Rightarrow $ genau 4 verschiedene Funktionen abhängig vn 1 Variablen!}\\ \hline
 \end{tabular}
 \label{tab:funktionenausgang}
@@ -1184,17 +1227,17 @@ Aussabe b: \glqq An der DHBW KA finden keine Präsenzvorlesungen statt.\grqq\\
 	Bew.:& $ a \vee b \overset{\text{dopp.Neg.}}{=} \overline{\overline{a\vee b}} \overset{\text{De Morgan}}{=} \overline{\overline{a} \wedge \overline{b}}\; \blacksquare$\\ \hline
 	Satz: & $ \{\vee, \neg\} $ ist ein vollständiges Operatorensystem.\\
 	Bew.:& $ a \wedge b \overset{\text{dopp.Neg.}}{=} \overline{\overline{a \wedge b}} \overset{\text{De Morgan}}{=} \overline{\overline{a} \vee \overline{b}}\; \blacksquare $\\ \hline
-	Satz: & $ \overline{\wedge} $ (\glqq NAND \grqq) ist ein vollständiges Operatorensystem.\\
+	Satz: & $ \overline{\wedge} $ (\glqq NAND\grqq) ist ein vollständiges Operatorensystem.\\
 	Bew.: & anhand des vollständigen Operatorensystems $ \{\vee, \neg\}\ldots $
 	\newline $ \neg a = \overline{a} \overset{Id.pot.}{=} \overline{(a \wedge a)} \;\overset{\text{1. Hälfte}}{\blacksquare}$
 	\newline $ a \vee b \overset{\text{dopp.Neg.}}{=} \overline{\overline{a \vee b}} \overset{\text{De Morgan}}{=} \overline{\overline{a} \wedge \overline{b}} = \overline{\overline{a \wedge a} \wedge \overline{b \wedge b}} \;\overset{\text{2. Hälfte}}{\blacksquare}$\\ \hline
-	Satz: & $ \{\overline{\vee}\} $ (\glqq NOR \grqq) ist ein vollständiges Operatorensystem.\\
+	Satz: & $ \{\overline{\vee}\} $ (\glqq NOR\grqq) ist ein vollständiges Operatorensystem.\\
 	Bew.: & $  $\\ %ToDo
 \end{tabular}
 \caption{Sätze/Beweise über vollständige Operatorensysteme}
 \end{table}
 
-Bsp: Speicherbausteine in \glqq NAND \grqq-Technologie.\\
+Bsp: Speicherbausteine in \glqq NAND\grqq-Technologie.\\
 
 \begin{Hint}{}{}
 	Funktionen können eindeutig durch die Wahrheitstabelle dargestellt werden. Die Darstellung als Funktionsterm ist dagegen nicht eindeutig.\\
@@ -1251,7 +1294,7 @@ $$
 \begin{table}[h!]
 	\centering
 	\begin{tabular}{rp{15cm}}
-	Satz: & Ein Minterm hat nur bei einer einzigen E-Belegung \glqq 1 \grqq als A-Belegung, in allen anderen Fällen der E-Belegung ergibt sich \glqq 0\grqq als A-Belegung.\\
+	Satz: & Ein Minterm hat nur bei einer einzigen E-Belegung \glqq 1\grqq als A-Belegung, in allen anderen Fällen der E-Belegung ergibt sich \glqq 0\grqq als A-Belegung.\\
 	Bew.:& geschenkt (Verständnis)\\ \hline
 	Satz: & Die \ac{DNF} der Funktion $ f $ ist ein äquivalent zur Funktion $ f $.\\
 	Bew.:& Verständnis/Bildungsregel\\ \hline
